[package]
name = "signing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-cors = "0.7.0"        # CORS support
base58 = "0.2.0"           # Base58 encoding
env_logger = "0.11.5"      # Logging
ring = "0.17.8"            # Cryptography library
rustls = "0.23.12"         # TLS library
rustls-pemfile = "2.1.3"   # PEM file parsing
serde = { version = "1.0.209", features = ["derive"] }  # Serialization
serde_json = "1.0.127"     # JSON handling
tokio = { version = "1.39.3", features = ["full"] }  # Async runtime

