[package]
name = "signing-service"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }  # Web framework with optional Rustls support
actix-cors = "0.7.0"        # CORS middleware
base58 = "0.2.0"           # Base58 encoding library
env_logger = "0.11.5"      # Logger initialization
ring = "0.17.8"            # Cryptographic operations
serde = { version = "1.0.209", features = ["derive"] }  # Serialization and deserialization
serde_json = "1.0.127"     # JSON handling library

